--- a/css/wishing.css
+++ b/css/wishing.css
@@ -200,55 +200,41 @@
 }
 
 .my-opinion-text{
-    font-family: "bree", "Sushant", sans-serif;
-    font-size: clamp(20px, 10vw, 180px);
-    font-weight: 700;
-    color: #8876FE;
-    color: #F63E54;
+    font-family: "Sushant", sans-serif;
+    font-size: clamp(20px, 3vw, 180px);
+    /* font-size: 60px; */
+    font-weight: 500;
+    /* color: #8876FE; */
+    color: #383838;
+}
+
+.pragati-view-wrapper{
+    max-width: 1000px;
+    margin: auto;
 }
 
 .pragati-view{
-    background: #ffffff;
-    margin: 10px 30px;
-    padding: 30px;
+    margin: 10px 15px;
+    padding: 10px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    
 }
 
-.pragati-view-header{
-    margin-bottom: 40px;
-}
-.pragati-view-heading{
-    font-size: clamp(20px, 8vw, 180px);
-    font-family: "bree", "Sushant", sans-serif;
-    color: #F63E54;
-    font-weight: 700;
-}
-
-.pragati-view-heghlight{
-    font-size: clamp(18px, 2vw, 180px);
-    font-family: "Sushant", sans-serif;
-    color: #FBB8C0;
-    font-weight: 700;
-    margin-top: -5px;
-}
-.pragati-view-heghlight-letter{
-    color: #F63E54;
-}
-
-.pragati-view-body{
-    color: #1D1D1F;
-    padding: 10px 0px 30px 0px;
-}
 .pragati-view-text{
-    font-family: 'Sushant', sans-serif;
-    color: #1D1D1F;
-    font-size: clamp(18px, 2vw, 180px);
-    font-weight: 500;
+    font-family: 'bree', 'love', 'Sushant', sans-serif;
+    font-size: clamp(20px, 8vw, 180px);
+    text-align: center;
+    font-weight: 700;
+    color: #dd5e5e;
+}
+
+.pragati-ff-fl{
+    color: #F63E54;
 }
 
 
-/* dd5e5e e68989  e37a7a  e06c6c */
+/* dd5e5e e68989  e37a7a  e06c6c #F63E54; */
